syntax = "proto3";

package proto.org.apache.helix.gateway;

message SingleTransitionMessage {
  enum TransitionType {
    ADD_SHARD = 0;
    DELETE_SHARD = 1;
    CHANGE_ROLE = 2;
  }
  string transitionID = 1;    // ID of transition message
  TransitionType transitionType = 2;   // Transition type for shard operations
  string resourceID = 3;              // Resource ID
  string shardID = 4;                 // Shard to perform operation
  string startState = 5;      // Shard start state
  string targetState = 6;     // Shard target state.
}

message TransitionMessage{
  repeated SingleTransitionMessage request = 1;
}

message SingleReplicaTransitionStatus {
  string transitionID = 1;       // ID of transition message
  bool isSuccess = 2;           // Was transition successfully performed
  optional string currentState = 3;   // If it failed, what is the current state it should reported as.
}

// resource has list of replica

message SingleResourceState {
  string resource = 1;
  repeated SingleReplicaState SingleReplicaState= 2;

}

message SingleReplicaState {
  string replicaName = 1;
  string currentState = 2;
}

//
message ReplicaStateMessage{
  repeated SingleReplicaTransitionStatus replicaStateST = 1;
  repeated SingleReplicaState replicaState = 2;
}


service HelixGatewayService {
  rpc report(stream ReplicaStateMessage) returns (stream TransitionMessage) {}
}

